--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -8,7 +8,13 @@
         padding-right: 40px !important;
     }
 }
-
+@media screen and (max-width:700px) {
+    .skeleton{
+                        flex-direction: column;
+                        align-items:  flex-start !important;
+    }                    
+  }
+                        
 .task__status{
              padding: 10px;  
 //              background-color:#53c41a1c ;   
