--- a/src/components/about/section-two/AboutUsHeader.module.scss
+++ b/src/components/about/section-two/AboutUsHeader.module.scss
@@ -73,18 +73,19 @@
     display: flex;
     justify-content: space-between;
     gap: 3rem;
-    @media only screen and (max-width: 768px){
+    @media only screen and (max-width: 768px) {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-    gap: 1rem
-}
+      gap: 1rem;
+    }
 
     .download {
       @include button;
       border: 1px solid $activeColor;
       background-color: transparent;
       width: 50%;
+      @include hover;
     }
 
     p {
@@ -92,4 +93,3 @@
     }
   }
 }
-
