--- a/src/components/userDasboardComponents/home/Home.module.scss
+++ b/src/components/userDasboardComponents/home/Home.module.scss
@@ -8,7 +8,7 @@
     background: #ffffff;
     border-bottom: 1px solid #e9f3f5;
     border-radius: 8px;
-    padding: 9px 24px;
+    padding: 9px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
