--- a/src/components/subscriptionPlan/Subscribe.module.scss
+++ b/src/components/subscriptionPlan/Subscribe.module.scss
@@ -24,6 +24,8 @@
       height: 570px;
       width: 355px;
       text-align: left;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
 
       a,
       .center {
@@ -60,6 +62,11 @@
         list-style: none;
         margin: 1.5rem 0;
       }
+    }
+
+    .card:hover,
+    .purple:hover {
+      transform: scale(1.05);
     }
   }
   .purple {
