--- a/src/components/userDasboardComponents/home/Home.module.scss
+++ b/src/components/userDasboardComponents/home/Home.module.scss
@@ -1,10 +1,13 @@
 .myWrapper {
   position: relative;
-  max-height: 100vh;
+  // max-height: 100vh;
+  height: calc(100vh - 120px);
   overflow: scroll;
   display: flex;
   flex-direction: column;
-  
+  // border: 1px solid red;
+  padding: 24px;
+
   .header {
     background: #ffffff;
     border-bottom: 1px solid #e9f3f5;
@@ -63,7 +66,6 @@
     gap: 32px;
     background: #ffffff;
     border: 1px solid #e9f3f5;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 8px;
     overflow: scroll;
     min-height: 65vh;
