create comment tab

--- a/src/components/taskDetails/taskDetails.module.scss
+++ b/src/components/taskDetails/taskDetails.module.scss
@@ -1,5 +1,5 @@
 .TaskDetail_wrapper {
-  min-height: 90vh;
+  max-height: 96vh;
   .TaskDetail_header {
     display: flex;
     flex-direction: column;
