Feat: Display error message on password reset

--- a/src/components/ResetPasswordPages/NewPasswordPage/NewPasswordPage.module.scss
+++ b/src/components/ResetPasswordPages/NewPasswordPage/NewPasswordPage.module.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
+
 .newpsw_page_cont {
   max-width: 464px;
   margin: 0px auto;
@@ -51,6 +54,12 @@
           outline: none;
           margin: 0 0 8px;
           transition: 0.3s ease;
+          font-family: "Open Sans";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 120%;
+          color: #333333;
 
           &:valid {
             border: 1px solid #714dd9;
@@ -137,4 +146,44 @@
   top: 42%;
   font-size: 1.5rem;
   color: #333333;
+}
+.disp_err {
+  justify-content: space-between;
+  background: #e4939395;
+  display: flex;
+  gap: 1rem;
+  border-left: 6px solid #da1e28;
+  border-radius: 8px;
+  padding: 10px;
+  align-items: center;
+  margin: 0 0 12px;
+  div {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    img {
+      width: 48px;
+      aspect-ratio: 1/1;
+    }
+    p {
+      font-family: "IBM Plex Sans";
+      font-style: normal;
+      margin: 0px;
+      color: black;
+      font-size: 15px;
+      font-weight: 600;
+    }
+  }
+  .close_btn {
+    transition: 0.3s ease-in;
+    &:hover {
+      background: #e49393;
+      border-radius: 50%;
+      transition: 0.3s ease-out;
+    }
+    img {
+      cursor: pointer;
+      width: 36px;
+    }
+  }
 }
