--- a/src/components/Comments/Comments.module.scss
+++ b/src/components/Comments/Comments.module.scss
@@ -126,6 +126,7 @@
 @media screen and (max-width:450px) {
     .message{
         max-width: 92% !important ;
+        font-size:15px !important;
     }
 }
 
