new responsive navbar

--- a/src/layout/header/navbar.module.scss
+++ b/src/layout/header/navbar.module.scss
@@ -18,10 +18,10 @@
   }
 
   .links {
-    flex-direction: column;
-    @media (min-width: 992px) {
-      flex-direction: row;
-    }
+    // flex-direction: column;
+    // @media (min-width: 992px) {
+    //   flex-direction: row;
+    // }
     a.active {
       color: $activeColor !important;
       border-bottom: 2px solid $activeColor !important;
