--- a/src/components/Comments/Comments.module.scss
+++ b/src/components/Comments/Comments.module.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,700&display=swap');
+
+
 .commentWrapper{
                       // border: 1px solid rebeccapurple;
                       height: calc(81vh - 200px);
@@ -5,6 +8,9 @@
                       overflow-y: auto;
                       overflow-x: hidden;
 }
+
+
+
 
 
 .commentWrapper::-webkit-scrollbar {
@@ -35,7 +41,14 @@
                       display:flex;
                       flex-direction: column;
                       gap: 5px;
-                      margin: 15px 7px;
+                      margin: 9px 20px;
+                      padding: 0 30px;
+                  }
+                  @media screen and (min-width:900px) {
+                    .comments{
+                      
+                        padding: 0 30px;
+                    }
                   }
 
                   .empty__state{
@@ -114,7 +127,7 @@
                       .inputField{
                                             // border: 1px solid #714dd9c7;
                                           
-                                            padding: 10px 3px;
+                                            padding: 10px 20px;
                                             gap: 7px;
                                            
                                             
@@ -123,17 +136,17 @@
 }
 
 
-@media screen and (max-width:450px) {
-    .message{
-        max-width: 92% !important ;
-        font-size:15px !important;
+    @media screen and (max-width:450px) {
+        .message{
+            max-width: 92% !important ;
+            
+        }
     }
-}
 
-@keyframes message {
-    0% { transform: scale(0);}
-    25% {  transform: scale(0.5)}
-    50% {  transform: scale(0.7)}
-    75% { transform: scale(1.05)}
-    100% {  transform: scale(1)}
-}
+    @keyframes message {
+        0% { transform: scale(0);}
+        25% {  transform: scale(0.5)}
+        50% {  transform: scale(0.7)}
+        75% { transform: scale(1.05)}
+        100% {  transform: scale(1)}
+    }
