--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,700&display=swap');
+
+span{
+  
+  font-family: Lato ,'sans-serif' !important;
+  text-transform: capitalize;
+}
+
 .taskListMobile:first-child {
     border-radius: 13px 15px 0px 0px;
 }
@@ -26,6 +34,8 @@
 }
 .task__status, .task__total, .due__date{
                       font-size: 14px;
+                        font-family: Lato ,'sans-serif' !important;
+                        text-transform:capitalize;
 }
 .due__date{
            margin-right: 70px;           
@@ -33,7 +43,9 @@
 .task__name{
                       padding: 9px 10px;
                      font-size: 14px;
-                     font-weight: 700;
+                       font-family: Lato ,'sans-serif' !important;
+                       text-transform:capitalize;
+                     font-weight: 600;
                      color: 714DD9;
 }
 .task__name.darker,.task__date.darker {
@@ -44,6 +56,21 @@
                        color: #714DD9;  
                        font-size: 16px;
                       //  margin-right: 50px;
+}
+.allTasks{
+
+  transform: translateX(-100vw) !important;
+  transition:all 1s ease;
+  position:absolute;
+  width:100%
+}
+.assigned{
+    transform: translateX(100vw) !important;
+    transition:all 1s ease;
+}
+
+.allTasks.active__tab,.assigned.active__tab{
+  transform:translateX(0) !important;
 }
 
 
@@ -56,6 +83,8 @@
                                         .task__date {
                                          
                                             font-size: 14px;
+                                              font-family: Lato ,'sans-serif' !important;
+                                              text-transform:capitalize;
                                         }
 }
 @media screen and (max-width:708px) {
