--- a/src/components/dasboard/TaskItems.module.scss
+++ b/src/components/dasboard/TaskItems.module.scss
@@ -56,6 +56,11 @@
       line-height: 100%;
       color: #707070;
     }
+    @media (max-width: 500px) {
+      .date {
+        display: none;
+      }
+    }
   }
   .tasks {
     display: flex;
@@ -63,10 +68,10 @@
     gap: 2px;
     .task {
       cursor: pointer;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      // align-items: center;
-      // justify-content: space-between;
+      display: flex;
+      gap: 12px;
+      justify-content: flex-start;
+      align-items: center;
       padding: 20px 40px;
       background: linear-gradient(
           0deg,
@@ -76,18 +81,31 @@
         #ffffff;
       border-top: 1px solid #e9f3f5;
 
+      .checkBox {
+        min-width: 16px;
+        height: 16px;
+        background: #d3d0d9;
+        border: 1px solid #d3d0d9;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      .detailsWrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      @media (max-width: 500px) {
+        .detailsWrapper {
+          grid-template-columns: 1fr 1fr;
+          gap: 12px;
+          .date {
+            text-align: left;
+          }
+        }
+      }
       .taskName {
         display: flex;
         align-items: center;
         gap: 12px;
-        .checkBox {
-          width: 16px;
-          height: 16px;
-          background: #d3d0d9;
-          border: 1px solid #d3d0d9;
-          border-radius: 4px;
-          cursor: pointer;
-        }
         .text {
           font-family: "Open Sans";
           font-style: normal;
@@ -95,6 +113,11 @@
           font-size: 16px;
           line-height: 120%;
           color: #333333;
+        }
+      }
+      @media (max-width: 500px) {
+        .taskName {
+          grid-column: 1/3;
         }
       }
 
@@ -117,6 +140,13 @@
           color: #707070;
         }
       }
+      @media (max-width: 500px) {
+        .asign {
+          grid-column: 2/3;
+          grid-row: 2/3;
+          justify-content: center;
+        }
+      }
 
       .date {
         font-family: "Open Sans";
@@ -126,6 +156,12 @@
         line-height: 18px;
         color: #707070;
         text-align: end;
+      }
+    }
+    @media (max-width: 500px) {
+      .task {
+        padding: 16px;
+        gap: 16px;
       }
     }
   }
