--- a/src/components/landing-page/happy-client/happyClientCard.module.scss
+++ b/src/components/landing-page/happy-client/happyClientCard.module.scss
@@ -30,7 +30,7 @@ p {
   flex-direction: column;
   align-items: center;
   border: 1px solid lightgrey;
-  width: 276px;
+  width: 270px;
   height: 383px;
   margin: 0 auto;
   background-color: #fcfcff;
@@ -71,4 +71,5 @@ p {
 .happy_client_card_desc {
   line-height: 180%;
   color: rgba(137, 139, 148, 1);
+  font-size: 14px;
 }
