--- a/src/components/landing-page/section-two/SectionTwo.module.scss
+++ b/src/components/landing-page/section-two/SectionTwo.module.scss
@@ -19,12 +19,8 @@
     .section__two_title {
       font-weight: 700;
       line-height: 160%;
-      font-size: 34px;
       margin-bottom: 1rem;
-
-      @media screen and (min-width: 992px) {
-        font-size: 48px;
-      }
+      @include header-font;
 
       .section__two_task {
         color: $accentOrange;
