--- a/src/components/landing-page/virtualAssistant/virtualAssistant.module.scss
+++ b/src/components/landing-page/virtualAssistant/virtualAssistant.module.scss
@@ -4,7 +4,7 @@
 .vr {
   position: relative;
   // border: 1px solid red;
-  height: 45rem;
+  // height: 45rem;
   overflow: hidden;
 
   &_header {
@@ -12,14 +12,11 @@
     text-align: center;
 
     h3 {
-      font-size: 34px;
+      @include header-font;
       margin: 1rem 0;
-      @media screen and (min-width: 992px) {
-        font-size: 48px;
-      }
     }
     p {
-      font-size: 18px;
+      // font-size: 18px;
       line-height: 180%;
     }
 
