--- a/src/components/landing-page/why-ticked/whytickedbox.module.scss
+++ b/src/components/landing-page/why-ticked/whytickedbox.module.scss
@@ -35,7 +35,10 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 1.5rem 3.6rem;
+  // padding: 1.5rem 3.6rem;
+  @media screen and (min-width: 900px) {
+    padding: 1.5rem 3.6rem;
+  }
 
   img {
     margin-bottom: 22px;
