--- a/src/layout/footer/Footer.module.scss
+++ b/src/layout/footer/Footer.module.scss
@@ -11,65 +11,55 @@
   align-items: center;
   justify-content: center;
   padding: 4rem 0;
-  
+
   .footer_text {
-    @media screen and (max-width: 596px) {
-      max-width: 70%;
-    }
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: -0.231818px;
-    max-width: 40%;
-    margin-top: 4rem;
+    // border: 1px solid red;
+    // display: none;
+    // font-style: normal;
+    // font-weight: 400;
+    // font-size: 17px;
+    // line-height: 23px;
+    // text-align: center;
+    // letter-spacing: -0.231818px;
+    // width: 665px;
+    // margin-top: 4rem;
 
     .p_tag {
-    @media screen and (max-width: 486px) {
-       width: 323.89px;
-    }
-      color: #F9F7FF;
+      // @media screen and (max-width: 486px) {
+      //   width: 323.89px;
+      // }
+      color: #f9f7ff;
       font-size: 17px;
       line-height: 23px;
-      opacity: 0.5;
+      // opacity: 0.5;
       font-size: 400;
       font-style: normal;
       text-align: center;
       letter-spacing: -0.231818px;
       width: 664.54px;
     }
-   
-   .p_container {
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-   } 
-    
+
+    .p_container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
-  
+
   .footer_links {
     @media screen and (max-width: 670px) {
       flex-direction: column;
     }
-   
+
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 40%;
+    justify-content: space-around;
     margin-top: 4rem;
-    
+    gap: 2rem;
+
     a {
-      @media screen and (max-width: 670px) {
-        margin-bottom: 1.5rem;
-      }
-      
-      @media screen and (max-width: 486px) {
-        margin-bottom: 3rem;
-    }
-      
       font-family: "DM Sans";
       font-style: normal;
       font-weight: 400;
@@ -80,41 +70,20 @@
       text-decoration: none;
     }
   }
-  
+
   .footer_socials {
-    @media screen and (max-width: 596px) {
-      width: 30%;
-    }
-    
-     @media screen and (max-width: 486px) {
-        margin-top: 1.5rem;
-        justify-content: space-around;
-    }
-      
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 15%;
-    margin-top: 4rem;
+    color: #fff;
   }
-  
+
   .footer_icons {
-     color: #FFFFFF;
-     width:  40px;
-     height: 20px;
+    color: #ffffff;
   }
-  
-  
+
   .footer_copywrite {
-      margin-top: 2.7rem;
-      font-size: 12px;
-      color: #F9F7FF;
-      opacity: 0.5;
-      text-align: center;
-      width: 314px;
-      height: 12px;
+    margin-top: 2.7rem;
+    font-size: 12px;
+    color: #f9f7ff;
+    opacity: 0.5;
+    text-align: center;
   }
-  
-  
 }
