--- a/src/layout/footer/news-letter-form/newsLetter.module.scss
+++ b/src/layout/footer/news-letter-form/newsLetter.module.scss
@@ -1,4 +1,7 @@
+@import "../../../scss/mixins";
+
 .news__letter {
+  width: 100%;
   .header {
     @media screen and (max-width: 486px) {
       margin-bottom: 2rem;
@@ -11,12 +14,11 @@
   }
 
   .form {
-    display: flex;
-    flex-direction: column;
+    // border: 1px solid red;
 
     .label {
       @media screen and (max-width: 486px) {
-        margin-left: -3px;
+        // margin-left: -3px;
       }
       text-align: left !important;
       font-size: 12px;
@@ -27,60 +29,30 @@
   }
 
   .input {
-    @media screen and (max-width: 486px) {
-      width: 311.89px;
-      height: 48px;
-    }
     width: 100%;
     background-color: #fff;
     height: 48px;
     border: 1px solid #e9f3f5;
     border-radius: 8px;
     padding: 0 2rem;
-    margin: 0 0 1rem 0;
-  }
-
-  .input_container {
-    @media screen and (max-width: 486px) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-    }
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
   }
 
   .subscribe_button {
-    @media screen and (max-width: 486px) {
-      font-size: 14px;
-      background: #714dd9;
-      border-radius: 8px;
-      padding: 14px;
-      width: 311.89px;
-      height: 48px;
-      border: none;
-      color: #fafafa;
-      margin-bottom: 2rem;
-    }
-
+    @include hover;
+    width: 100%;
     font-weight: 600;
     font-size: 14px;
     text-transform: uppercase;
     background: #714dd9;
     border-radius: 8px;
-    padding: 14px;
-    width: 103px;
-    height: 48px;
-    border: none;
+    padding: 14px 30px;
     color: #fafafa;
-    margin-top: -15px;
-    cursor: pointer;
     transition: 0.3s ease;
+    &:hover {
+      background: #714dd9;
+    }
+    @media screen and (min-width: 600px) {
+      width: fit-content;
+    }
   }
 }
