--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,7 @@ $font-dm-sans: "DM Sans", sans-serif;
 $font-open-sans: "Open Sans", sans-serif;
 
 // light mode
-$activeColor-light: rgb(113, 77, 217);
+$activeColor-light: #714dd9;
 $blackText-light: rgba(112, 112, 112, 1);
 $accentOrange-light: rgba(247, 148, 31, 1);
 
