--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -28,6 +28,14 @@ body {
   font-family: "Open Sans", sans-serif;
   color: $black !important;
   background: #fff !important;
+
+  // p {
+  //   // border: 1px solid red;
+  //   font-size: 14px !important;
+  //   @media (min-width: 992px) {
+  //     font-size: 18px !important;
+  //   }
+  // }
 }
 
 .hover {
@@ -72,4 +80,7 @@ body {
 
 input {
   border: 1px solid red;
+}
+
+.fluid-header {
 }
