--- a/src/components/createTask/createTask.module.scss
+++ b/src/components/createTask/createTask.module.scss
@@ -21,8 +21,9 @@
       width: 30rem;
     }
     @media screen and (max-width: 508px) {
-      width: unset !important;
+      width: 90vw !important;
     }
+
     width: 35rem;
     border-radius: 8px;
     background-color: #f9f7ff;
@@ -85,11 +86,17 @@
       }
     }
     .createTask_date_time {
+      @media screen and (max-width: 509px) {
+        flex-direction: column;
+      }
       display: flex;
       flex-direction: row;
       align-items: flex-start;
       justify-content: space-between;
       .createTask_date {
+        @media screen and (max-width: 509px) {
+          width: 100%;
+        }
         width: 45%;
         display: flex;
         flex-direction: column;
@@ -126,6 +133,9 @@
         }
       }
       .createTask_time {
+        @media screen and (max-width: 509px) {
+          width: 100%;
+        }
         width: 45%;
         display: flex;
         flex-direction: column;
