--- a/src/components/taskDetails/taskDetails.module.scss
+++ b/src/components/taskDetails/taskDetails.module.scss
@@ -2,6 +2,31 @@
 
 .TaskDetail_wrapper {
   max-height: 96vh;
+  .TaskDetail_back {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 24px;
+    margin-top: 24px;
+    .TaskDetail_backIcon {
+      color: #714dd9;
+      font-size: 25px;
+    }
+    .TaskDetail_backText {
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 120%;
+      color: #714dd9;
+      margin-left: 10px;
+      transition: margin-left 0.3s ease-in-out;
+      &:hover {
+        margin-left: 15px;
+      }
+    }
+  }
   .TaskDetail_header {
     display: flex;
     flex-direction: column;
@@ -128,6 +153,8 @@
   .TaskDetail_body {
     margin: 24px;
     border-radius: 8px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     @media screen and (max-width: 1000px) {
       flex-direction: column-reverse;
     }
