--- a/src/components/AssistantVA/VAHome/Clock.module.scss
+++ b/src/components/AssistantVA/VAHome/Clock.module.scss
@@ -25,4 +25,19 @@
 .period {
     font-size: 0.8rem;
     color: white;
+    font-family: 'Orbitron', sans-serif !important;
+}
+
+@media screen and (max-width: 768px) {
+    .digital {
+        background: transparent;
+        font-size: 1rem;
+        color: #714DD9;
+        padding: 5px 0px;
+    }
+
+    .period {
+        color: #714DD9;
+        font-family: 'Orbitron', sans-serif !important;
+    }
 }
