--- a/src/components/AssistantVA/VAHome/Home.module.scss
+++ b/src/components/AssistantVA/VAHome/Home.module.scss
@@ -348,7 +348,8 @@
     }
 
     .taskDetail_container {
-        width: 80%;
+        width: 100vw;
+        height: 100vh;
         background: white;
     }
 }
