style: about us page

--- a/src/components/about/mission/valuecard.module.scss
+++ b/src/components/about/mission/valuecard.module.scss
@@ -2,7 +2,7 @@
   max-width: 25rem;
   text-align: center;
   background: rgb(244, 249, 250);
-  padding: 3rem;
+  padding: 3rem 2rem;
   border-radius: 8px;
   h3 {
    margin: 1rem;
