--- a/src/components/about/hero/aboutHero.module.scss
+++ b/src/components/about/hero/aboutHero.module.scss
@@ -1,56 +1,20 @@
 @import "../../../scss/mixins";
 @import "../../../scss/variables";
 
-  /*
-.aboutus{
-background:rgba(113,77,217,0.1);
-}
- */ 
- 
 .header {
   @include container;
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: space-between;
-  align-items: center;
-  height: 70vh;
-  margin-bottom: 5rem;
-  @media (min-width: 992px) {
-    flex-direction: row;
+
+  h1 {
+    @include header-font;
+    text-transform: uppercase;
+    font-family: Open Sans;
+    .yellowText {
+      color: #fea759;
+    }
   }
-
-  .text {
-    text-align: center;
-    flex: 1;
-    margin: 1rem 4rem;
-    a {
-      margin: 0 auto;
-    }
-    @media (min-width: 992px) {
-      text-align: left;
-      a {
-        margin: 0;
-      }
-      p{
-        width: 500px;
-      }
-    }
-
-    h1 {
-      @include header-font;
-      text-transform: uppercase;
-      font-family: Open Sans;
-      .yellowText{
-        color: #FEA759;
-      }
-    }
-p {
-      font-size: 18px;
-      margin: 1rem 0 3rem;
-      text-align: justify;
-      font-family: Open Sans;
-      text-justify: inter-word;
-    }
+  p {
+    text-align: justify;
+    line-height: 180%;
   }
 
   .img {
@@ -61,22 +25,3 @@ p {
     }
   }
 }
-
- @media (max-width: 768px) {
-   .header{
- @include container;
-  display: flex;
-  flex-direction: column;
-  flex-direction: column-reverse;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 1rem;
-  height: 100vh;
-  margin-bottom: 5rem;
-  .text{ 
-    p{
-     text-align: center;
- }
- }
-   }
-  }
