fix: repared media queries for the create and edit modal. and repared issues with delete task modal feat: added back button to detials page.

--- a/src/components/createTask/createTask.module.scss
+++ b/src/components/createTask/createTask.module.scss
@@ -21,7 +21,8 @@
       width: 30rem;
     }
     @media screen and (max-width: 508px) {
-      width: 90vw !important;
+      width: 100vw !important;
+      height: 100vh !important;
     }
 
     width: 35rem;
