--- a/src/components/about/section-two/AboutUsHeader.module.scss
+++ b/src/components/about/section-two/AboutUsHeader.module.scss
@@ -4,11 +4,11 @@
 // ===================
 // MIXINS
 // ===================
-@mixin img_fluid {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+// @mixin img_fluid {
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
 // ====================
 // END OF MIXINS
 // ====================
@@ -41,11 +41,12 @@
 
 .main {
   position: relative;
+  // border: 1px solid red;
   @media (min-width: 900px) {
     display: flex;
     align-items: center;
     padding: 10rem 0;
-    max-width: 80vw;
+    max-width: 1340px;
     margin: 0 auto;
   }
 
