--- a/src/components/contact/contactForm/ContactForm.module.scss
+++ b/src/components/contact/contactForm/ContactForm.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin:1rem 2rem;
+  // margin:1rem 2rem;
   // padding: 0 2rem;
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
@@ -101,7 +101,7 @@ button[type="submit"] {
   display: flex;
   flex-direction: column;
   width: 26rem;
-  margin:1rem 2rem;
+  // margin:1rem 2rem;
   // padding: 0 2rem;
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
@@ -167,7 +167,7 @@ button[type="submit"] {
   display: flex;
   flex-direction: column;
   width: 20rem;
-  margin:1rem 2rem;
+  // margin:1rem 2rem;
   // padding: 0 2rem;
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
