--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -14,6 +14,6 @@
   line-height: 160%;
   color: #fafafa;
   text-decoration: none;
-  width: 107px;
+  width: 100%;
   text-transform: uppercase;
 }
