--- a/src/components/dasboard/TaskItems.module.scss
+++ b/src/components/dasboard/TaskItems.module.scss
@@ -4,15 +4,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 40px;
+    // padding-right: 40px;
 
     .status {
       display: flex;
       align-items: center;
-      gap: 40px;
+      width: 100%;
+      // gap: 4rem;
+      // gap: 40px;
       .statusName {
+        transform: scale(0.6);
+        transform-origin: 0;
+        @media (min-width: 600px) {
+          transform: scale(1);
+        }
         display: flex;
-        align-items: stretch;
+        // align-items: stretch;
         .icon {
           display: flex;
           padding: 10px;
@@ -33,6 +40,7 @@
           font-style: normal;
           font-weight: 600;
           font-size: 16px;
+          // font-size: 12px;
           line-height: 120%;
           color: #e9f3f5;
         }
