--- a/src/components/dasboard/TaskItems.module.scss
+++ b/src/components/dasboard/TaskItems.module.scss
@@ -67,6 +67,7 @@
     flex-direction: column;
     gap: 2px;
     .task {
+      position: relative;
       cursor: pointer;
       display: flex;
       gap: 12px;
@@ -81,7 +82,16 @@
         #ffffff;
       border-top: 1px solid #e9f3f5;
 
+      .overlay {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        // background-color: red;
+      }
+
       .checkBox {
+        position: relative;
         min-width: 16px;
         height: 16px;
         background: #d3d0d9;
@@ -92,6 +102,7 @@
       .detailsWrapper {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        flex: auto;
       }
       @media (max-width: 500px) {
         .detailsWrapper {
@@ -106,6 +117,8 @@
         display: flex;
         align-items: center;
         gap: 12px;
+        // position: relative;
+
         .text {
           font-family: "Open Sans";
           font-style: normal;
@@ -126,6 +139,7 @@
         align-items: center;
         justify-content: center;
         gap: 8px;
+        position: relative;
 
         img {
           width: 20px;
