--- a/src/components/AssistantVA/VAHome/Home.module.scss
+++ b/src/components/AssistantVA/VAHome/Home.module.scss
@@ -94,14 +94,33 @@
 }
 
 .va_tasks {
-    background: white;
+    
     margin-top: 1rem;
     height: 70vh;
     overflow-y: scroll;
     overflow-x: hidden;
     border-radius: 8px 8px 0px 0px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+    position: relative;   
 }
+
+.va_allTasks {
+    transform: translateX(-100vw) !important;
+    transition:all 1s ease;
+    position:absolute;
+    width:100%;
+    background: white;
+}
+
+.va_assigned {
+    transform: translateX(100vw) !important;
+    transition:all 1s ease;
+    background: white;
+}
+
+.va_allTasks.active_tab,.va_assigned.active_tab{
+    transform:translateX(0) !important;
+  }
 
 .va_no_tasks {
     display: flex;
