style: change the alert styling on reset password - email verfication page

--- a/src/components/ResetPasswordPages/ResetPage/ResetPasswordPage.module.scss
+++ b/src/components/ResetPasswordPages/ResetPage/ResetPasswordPage.module.scss
@@ -117,9 +117,14 @@
   }
 }
 .toast_classname {
-  background: white;
-  border: 1px solid #ff4d4f;
-  color: #ff0004;
-  height: 15px;
+  font-family: "Roboto", sans-serif;
+  color: #b30e16;
+  border: 1px solid #e49393;
+  background: #ffe4e4;
   border-radius: 8px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  // color: #7a1212;
 }
