Feat: Change Sign In button state on click and Error message (Login Page)

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -297,6 +297,9 @@
           font-weight: 600;
           font-size: 14px;
           line-height: 180%;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
