--- a/src/components/VA-Profile/VaProfile.module.scss
+++ b/src/components/VA-Profile/VaProfile.module.scss
@@ -1,11 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
 
 .app {
-  background-color: #F9F7FF;
-  padding: 2.5rem;
+  background-color: #f9f7ff;
+  padding: .5rem;
+  @media (min-width: 900px) {
+    padding: 2.5rem;
+  }
 }
 
-.profile_raw_box{
+.profile_raw_box {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -15,27 +18,24 @@
   display: flex;
   flex-direction: row;
   gap: 2rem;
-  background: #FFFFFF;
-  border: 1px solid #D3D0D9;
+  background: #ffffff;
+  border: 1px solid #d3d0d9;
   border-radius: 8px;
   padding: 2rem 1.5rem;
   height: fit-content;
 }
-
-
 
 .header {
   display: flex;
   justify-content: flex-end;
   width: 74.375rem;
   height: 4rem;
-  background: #F6FAFB;
-  border-bottom: 0.063rem solid #E9F3F5;
+  background: #f6fafb;
+  border-bottom: 0.063rem solid #e9f3f5;
 }
 
-
 .AiOutlineArrowLeft {
-  color: #576B75;
+  color: #576b75;
   width: 1.3rem;
   height: 1.3rem;
 }
@@ -51,10 +51,10 @@
 .back_button_header {
   color: #707070;
   font-weight: 400;
-  font-size: 1rem;  
-  width: 1.688rem; 
-  height: 1.188rem; 
-  margin-left: 0.313rem; 
+  font-size: 1rem;
+  width: 1.688rem;
+  height: 1.188rem;
+  margin-left: 0.313rem;
 }
 
 .edit_container {
@@ -62,22 +62,22 @@
   justify-content: space-between;
   padding: 13px 24px;
   margin: 0rem 0rem 3.125rem;
-  background: #FFFFFF;
-  border: 1px solid #D3D0D9;
+  background: #ffffff;
+  border: 1px solid #d3d0d9;
   border-radius: 8px;
 }
 
 .edit_button {
   padding: 15px 24px;
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   text-align: center;
   align-items: center;
   font-weight: 400;
   font-size: 1rem;
-  background: #F6FAFB;
-  background: #714DD9;
+  background: #f6fafb;
+  background: #714dd9;
   border-radius: 4px;
 }
 
@@ -86,23 +86,21 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 0.625rem; 
+  gap: 0.625rem;
 }
 
 .profile_icon_header {
-  color: #2B363B;
-  width: 5.188rem; 
-  height: 2.5rem; 
+  color: #2b363b;
+  width: 5.188rem;
+  height: 2.5rem;
   font-weight: 700;
-  font-size : 1.563rem; 
-  line-height: 2.5rem; 
+  font-size: 1.563rem;
+  line-height: 2.5rem;
 }
-
 
 .profile_container_items {
-  margin-right: 5.5rem;
+  // margin-right: 5.5rem;
 }
-
 
 .profile_container__virtualA {
   font-weight: 700;
@@ -115,17 +113,17 @@
   font-weight: 600;
   line-height: 100%;
   color: #333333;
-  font-size: 0.75rem; 
-  margin-bottom: 0.625rem; 
+  font-size: 0.75rem;
+  margin-bottom: 0.625rem;
 }
 
-
-.profile_container_num, .profile_container_items_header {
+.profile_container_num,
+.profile_container_items_header {
   font-weight: 400;
   font-size: 1rem;
   line-height: 180%;
   color: #333333;
-  margin-right:  2rem;
+  margin-right: 2rem;
 }
 
 .profile_container_address {
@@ -142,7 +140,7 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 0.75rem; 
+  font-size: 0.75rem;
   line-height: 1.188rem;
   color: #707070;
   margin-right: 5rem;
@@ -166,27 +164,26 @@
   line-height: 1.188rem;
   color: #707070;
   margin-top: 0.625rem;
-  margin-bottom: 2.5rem; 
+  margin-bottom: 2.5rem;
 }
 
 .star {
   width: 1.25rem;
   height: 1.188rem;
-  color: #FDA758;
+  color: #fda758;
   margin-right: 0.313rem;
   margin-left: 0.313rem;
 }
 
-.CgProfile  {
+.CgProfile {
   width: 2rem;
-  height: 2rem;;
-  color: #714DD9;
+  height: 2rem;
+  color: #714dd9;
 }
 
 .main_profile_image {
   width: 6.25rem;
   height: 6.25rem;
-  
 }
 
 .button_container {
@@ -197,42 +194,43 @@
 .button1 {
   width: fit-content;
   padding: 0.625rem;
-  color: #714DD9;
+  color: #714dd9;
   border-radius: 0.25rem;
-  background: linear-gradient(0deg, rgba(113, 77, 217, 0.11), rgba(113, 77, 217, 0.11)), #FFFFFF;
+  background: linear-gradient(
+      0deg,
+      rgba(113, 77, 217, 0.11),
+      rgba(113, 77, 217, 0.11)
+    ),
+    #ffffff;
   font-weight: 400;
   border: none;
 }
-
-
-
 
 .rating_container {
   width: 15.625rem;
   margin-bottom: 1.25rem;
   padding: 1rem;
-  background: #FFFFFF;
-  border: 1px solid #D3D0D9;
+  background: #ffffff;
+  border: 1px solid #d3d0d9;
   border-radius: 8px;
 }
 
 .rating_header {
   color: #707070;
   font-weight: 400;
-  width: 2.563rem; 
+  width: 2.563rem;
   height: 1.188rem;
-  line-height: 1.188rem; 
-  margin-bottom: 0.625rem; 
+  line-height: 1.188rem;
+  margin-bottom: 0.625rem;
 }
-
 
 .rating_star_header {
   width: 1.438rem;
   height: 1.25rem;
   font-size: 1.25rem;
   font-weight: 700;
-  line-height: 1.25rem; 
-  color: #714DD9;
+  line-height: 1.25rem;
+  color: #714dd9;
 }
 
 .profile_container {
@@ -244,46 +242,46 @@
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
-  background: #FFFFFF;
-  border: 1px solid #D3D0D9;
+  background: #ffffff;
+  border: 1px solid #d3d0d9;
   border-radius: 0.5rem;
-  width: inherit; 
-  height: 9.688rem; 
+  width: inherit;
+  height: 9.688rem;
 }
 
 .profile_stats_header {
-  font-size: 0.875rem; 
+  font-size: 0.875rem;
   font-weight: 700;
-  line-height: 1.563rem; 
+  line-height: 1.563rem;
   color: #707070;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .profile_stats_items_container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 0.938rem; 
-  gap: 1.125rem; 
-  width: fit-content;  
-  height: 5.125rem; 
-  background: #FFFFFF;
-  margin: auto; 
+  padding: 0.938rem;
+  gap: 1.125rem;
+  width: fit-content;
+  height: 5.125rem;
+  background: #ffffff;
+  margin: auto;
 }
 
 .profile_stats_items {
-    background: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 3.875rem; 
-    height: 3.875rem;
-    padding-right: 1.875rem; 
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 3.875rem;
+  height: 3.875rem;
+  padding-right: 1.875rem;
 }
 
 .profile_stats_items_header1 {
-  background: #FFFFFF;
-  width: 0.625rem; 
+  background: #ffffff;
+  width: 0.625rem;
   height: 1.25rem;
   font-size: 1rem;
   font-weight: 700;
@@ -292,32 +290,29 @@
 }
 
 .profile_stats_items_header2 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 0.625rem;
   height: 1.25rem;
   font-size: 1rem;
   font-weight: 700;
   line-height: 1.25rem;
   color: #333333;
-  
 }
 
 .profile_stats_items_header3 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 0.625rem;
   height: 1.25rem;
   font-size: 1rem;
   font-weight: 700;
   line-height: 20px;
   color: #333333;
-
 }
 
-
 .profile_stats_items_paragraph1 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 3.188rem;
-  height: 2.375rem; 
+  height: 2.375rem;
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.188rem;
@@ -326,7 +321,7 @@
 }
 
 .profile_stats_items_paragraph2 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 3.188rem;
   height: 38px;
   font-size: 0.75rem;
@@ -337,12 +332,12 @@
 }
 
 .profile_stats_items_paragraph3 {
-  background: #FFFFFF;
-  width: 3.188rem; 
-  height: 2.375rem; 
-  font-size:  0.75rem;
+  background: #ffffff;
+  width: 3.188rem;
+  height: 2.375rem;
+  font-size: 0.75rem;
   font-weight: 400;
-  line-height: 1.188rem; 
+  line-height: 1.188rem;
   color: #707070;
   text-align: center;
 }
@@ -369,231 +364,210 @@
   display: flex;
 }
 
-
-
-
 /*********        Phone view          ********/
 @media screen and (max-width: 780px) {
   .profile_container {
-   display: flex;
-   flex-direction: column;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .edit_container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3.125rem;
+    margin-left: 0rem;
+  }
+
+  .button_container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.625rem;
+  }
+
+  .button1 {
+    width: 9.375rem;
+    height: 2.375rem;
+    font-weight: 400;
+    border: none;
+  }
+
+  .rating_header {
+    color: #707070;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-bottom: 0.625rem;
+  }
+
+  .profile_container_items_id {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 1.188rem;
+    color: #707070;
+    margin-top: 0.625rem;
+  }
+
+  .profile_container_details5 {
+    margin-bottom: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .profile_container_details4 {
+    margin-bottom: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .main_profile_image {
+    width: 6.25rem;
+    height: 6.25rem;
+    margin-right: 2.5rem;
+    margin-left: 0rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .CgProfile {
+    width: 1.667rem;
+    height: 1.667rem;
+    color: #714dd9;
+    margin-left: 0rem;
+  }
+
+  .edit_container {
+    display: flex;
+    margin-bottom: 3.125rem;
+    margin-left: 0rem;
+  }
+
+  .edit_button {
+    border: none;
+    display: flex;
+    text-align: center;
+  }
+
+  .profile_container_items_id {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1.188rem;
+    color: #707070;
+    margin-bottom: 0.625rem;
+  }
+
+  .profile_container_items_city {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    color: #707070;
+    margin-bottom: 0.625rem;
+  }
+
+  .back_button_header {
+    color: #707070;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-left: 0.313rem;
+    margin-top: 0.1rem;
+  }
+
+  .AiOutlineArrowLeft {
+    color: #576b75;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .profile_container_details1 {
+    margin-bottom: 2.5rem;
+  }
+
+  .profile_container_details2 {
+    margin-bottom: 2.5rem;
+  }
+
+  .profile_container_details3 {
+    margin-bottom: 2.5rem;
+  }
+
+  .profile_container_details4 {
+    margin-bottom: 2.5rem;
+    display: flex;
+  }
+
+  .profile_container_details5 {
+    margin-bottom: 2.5rem;
+    display: flex;
+  }
+
+  .profile_container_num {
+    margin-bottom: 1.5rem;
+  }
+
+  .profile_container_items {
+    gap: 1.25rem;
+    margin-left: 0rem;
+  }
 }
-
-
-
-.edit_container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom:  3.125rem;
-  margin-left: 0rem;
-}
-
-.button_container {
-  display: flex;
-  flex-direction: column;
-  gap: 0.625rem;
-}
-
-.button1 {
-  width: 9.375rem; 
-  height: 2.375rem; 
-  font-weight: 400;
-  border: none;
-}
-
-
-
-.rating_header {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_id {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem;
-  line-height: 1.188rem;
-  color: #707070;
-  margin-top: 0.625rem; 
-}
-
-
-
-.profile_container_details5 {
-  margin-bottom: 2.5rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.profile_container_details4 {
-  margin-bottom: 2.5rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.main_profile_image {
-  width: 6.25rem;
-  height: 6.25rem;
-  margin-right: 2.5rem;
-  margin-left: 0rem;
-  margin-bottom: 0.5rem;
-}
-
-.CgProfile  {
-  width: 1.667rem;
-  height: 1.667rem;
-  color: #714DD9;
-  margin-left: 0rem;
-}
-
-.edit_container {
-  display: flex;
-  margin-bottom:  3.125rem;
-  margin-left: 0rem;
-}
-
-.edit_button {
-  border: none;
-  display: flex;
-  text-align: center;
-}
-
-.profile_container_items_id {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_city {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem; 
-  color: #707070;
-  margin-bottom: 0.625rem;
-}
-
-.back_button_header {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;  
-  margin-left: 0.313rem; 
-  margin-top: 0.1rem; 
-}
-
-.AiOutlineArrowLeft {
-  color: #576B75;
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.profile_container_details1 {
-  margin-bottom: 2.5rem;
-}
-
-.profile_container_details2 {
-  margin-bottom: 2.5rem;
-}
-
-.profile_container_details3 {
-  margin-bottom: 2.5rem;
-}
-
-.profile_container_details4 {
-  margin-bottom: 2.5rem;
-  display: flex;
-}
-
-.profile_container_details5 {
-  margin-bottom: 2.5rem;
-  display: flex;
-}
-
-.profile_container_num {
-  margin-bottom: 1.5rem;
-}
-
-
-
-.profile_container_items {
-  gap: 1.25rem;
-  margin-left: 0rem;
-}
-
-
-}
-
-
-
 
 /**********      Tablet view  *************/
 @media screen and (max-width: 1366px) {
   .profile_container {
-   display: flex;}
+    display: flex;
+  }
 
-.back_button_header {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;  
-  margin-left: 0.313rem; 
-  margin-top: 0.2rem; 
+  .back_button_header {
+    color: #707070;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-left: 0.313rem;
+    margin-top: 0.2rem;
+  }
+
+  .AiOutlineArrowLeft {
+    color: #576b75;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .edit_button {
+    text-align: center;
+    font-weight: 600;
+  }
+
+  .main_profile_image {
+    width: 6.25rem;
+    height: 6.25rem;
+    margin-right: 2.5rem;
+    margin-left: 0rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .CgProfile {
+    width: 1.667rem;
+    height: 1.667rem;
+    color: #714dd9;
+    margin-left: 0rem;
+  }
+
+  .edit_container {
+    display: flex;
+    margin-bottom: 3.125rem;
+    margin-left: 0rem;
+  }
+
+  .profile_container_items {
+    gap: 1.25rem;
+    margin-left: 0rem;
+  }
 }
-
-.AiOutlineArrowLeft {
-  color: #576B75;
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.edit_button {
-  text-align: center;
-  font-weight: 600;
-}
-
-.main_profile_image {
-  width: 6.25rem;
-  height: 6.25rem;
-  margin-right: 2.5rem;
-  margin-left: 0rem;
-  margin-bottom: 0.5rem;
-}
-
-.CgProfile  {
-  width: 1.667rem;
-  height: 1.667rem;
-  color: #714DD9;
-  margin-left: 0rem;
-}
-
-.edit_container {
-  display: flex;
-  margin-bottom:  3.125rem;
-  margin-left: 0rem;
-}
-
-
-
-
-.profile_container_items {
-  gap: 1.25rem;
-  margin-left: 0rem;
-}
-
-}
-
-
